correct name Harmony ==> Symphony

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <section class="card">
         <img src="img/HarmonyOfSeas.jpg" alt="" />
         <div>
-          <h3>Dec-2019, Harmony of Seas, RCL</h3>
+          <h3>Dec-2019, Symphony of Seas, RCL</h3>
           <p>
             7-Night cruise, Brandon(10), Elena(7.5): East Carribean. This cruise is so far largest cruise ship in whole
             world (5479 passengers + 2100 crew)!
